openshift/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-tomcat
  labels:
    app: sample-tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-tomcat
  template:
    metadata:
      labels:
        app: sample-tomcat
    spec:
      containers:
        - name: sample-tomcat
          image: quay.io/akhino/sample-tomcat:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: server-xml
              mountPath: /usr/local/tomcat/conf/server.xml
              subPath: server.xml
              readOnly: true
      volumes:
        - name: server-xml
          configMap:
            name: sample-tomcat-server-xml
