openshift/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-tomcat
  labels:
    app: sample-tomcat
spec:
  selector:
    app: sample-tomcat
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
