openshift/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-tomcat
  labels:
    app: sample-tomcat
spec:
  host: sample-tomcat.apps.rosa.akhino-modnize.6abk.p3.openshiftapps.com
  path: /
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: sample-tomcat
    weight: 100
  port:
    targetPort: http
